.click changed to .click for IE support. Also changed overflow to auto vs scroll for IE visual bug

--- a/styles/select-field.styl
+++ b/styles/select-field.styl
@@ -74,7 +74,7 @@ $select-field-box-shadow = 0 2px 0 rgba(0, 0, 0, .1)
   left: 0;
   width: 100%;
   max-height: 200px;
-  overflow: scroll;
+  overflow: auto;
   z-index: 1050; // Needs to be higher than .has-error
   background-color: white;
   border: $border;
